# python-socks

./: .coveragerc  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
python_socks/: _abc.py  _basic_auth.py  _helpers.py  _proto_socks4_async.py  _proto_socks4_sync.py  _proto_socks5.py  _proto_socks5_async.py  _proto_socks5_sync.py  _proxy_async.py  _proxy_async_aio.py  _proxy_async_curio.py  _proxy_async_trio.py  _proxy_factory.py  _proxy_sync.py  _resolver_async_curio.py  _stream_async.py  _stream_async_aio.py  _stream_async_curio.py  _stream_async_trio.py  _stream_sync.py  _version.py
python_socks/_connectors/: factory_async.py  factory_sync.py  http_async.py  http_sync.py  socks4_async.py  socks4_sync.py  socks5_async.py  socks5_sync.py
python_socks/_proto/: _http_async.py  _http_sync.py  _socks4_async.py  _socks4_sync.py  _socks5_async.py  _socks5_sync.py  socks5.py  socks5_async.py  socks5_sync.py
python_socks/_protocols/: http.py  socks4.py  socks5.py
python_socks/async_/: _proxy_chain.py
python_socks/async_/anyio/: _chain.py  _connect.py  _factory.py  _proxy.py  _stream.py
python_socks/async_/asyncio/: __init__.py  _connect.py  _proxy.py  _stream.py
python_socks/async_/curio/: __init__.py  _connect.py  _proxy.py
python_socks/async_/trio/: __init__.py  _proxy.py
python_socks/sync/: __init__.py  _connect.py  _proxy.py
tests/: config.py  conftest.py  http_app.py  mocks.py  proxy_server.py  test_core_socks_async_aio.py  test_core_socks_async_aio_ext.py  test_core_socks_async_curio.py  test_core_socks_async_trio.py  test_core_socks_sync.py  test_misc.py  test_proxy_async_aio.py  test_proxy_async_aio_ext.py  test_proxy_async_aio_v2.py  test_proxy_async_anyio.py  test_proxy_async_anyio_v2.py  test_proxy_async_curio.py  test_proxy_async_trio.py  test_proxy_async_trio_v2.py  test_proxy_sync.py  test_proxy_sync_v2.py  test_resolvers.py
tests/cert/: proxy_host.crt  proxy_host.key  proxy_host.pem
(+25 files in other folders)
